# eval-forge

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
decisions/: DEC-EF-002-vendor-harness-checks.md
docs/: first-pr.md
eval_forge/: __init__.py  __main__.py  cli.py  gate.py  init.py  pack.py  run.py  show.py
examples/: customer_config.yaml  rag_correctness_pack.yaml
examples/fixture_target/: responses.json
examples/fixture_target_regressed/: responses.json
reports/: comment.md  run.json
schemas/: eval_pack.schema.json  run_report.schema.json
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
templates/agent/: eval_pack.yaml
templates/rag/: eval_pack.yaml
tests/: test_cli.py  test_gate.py  test_init.py  test_pack.py  test_run.py
