[project]
name = "eval-forge"
version = "0.1.0"
description = "An eval-pack runner: load a typed eval pack, run cases against a target, gate on the report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vignesh Gopalakrishnan" }]
dependencies = [
  "jsonschema>=4.21",
  "PyYAML>=6.0",
]

# trace-to-eval-harness ships the deterministic check primitives. it is a local
# sibling repo, not published to PyPI, so v0.1 vendors the same check semantics
# (contains / refusal / citation-span / abstention) rather than importing it.
# when the harness publishes, swap these to an optional dependency:
#   [project.optional-dependencies]
#   harness = ["trace-to-eval-harness>=0.1"]

[project.scripts]
eval-forge = "eval_forge.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
